# opencl-study

./: .clang-format  .gitignore  ARCHITECTURE.md  ARCHITECTURE_v0.md  ARCHITECTURE_v1.md  CMakeLists.txt  DESIGN.md  IMPL_PLAN.md  MISRA_C_2023_COMPLIANCE.md  README.md  STUDY.md  _REQUIREMENTS.md  architecture.html
analyzer/: .gitignore  README.md  cdep_analyzer.py  codebase_reviewer.py  data_focus.json  download_d3.py  get_d3_offline.html  pyproject.toml  requirements.txt
config/: README.md  config.ini  dilate3x3.ini  dilate3x3.json  gaussian5x5.ini  gaussian5x5.json  harris_corner.json  inputs.ini  inputs.json  lucas_kanade.json  outputs.ini  outputs.json  relu.json  svd.json  template.ini  template.json
docs/: .gitignore  ADD_NEW_ALGO.md  ALGORITHM_INTERFACE.md  ANSWER_SDK_PACKAGING.md  ARCH_ANALYSIS.md  CLANG_FORMAT_GUIDE.md  CLEAN_ARCHITECTURE_ANALYSIS.md  CONFIG_KERNEL_ARG.md  CONFIG_SYSTEM.md  CUSTOM_API_INTEGRATION.md  CUSTOM_CL_API.md  Doxyfile  HowToAdd.md  NEW_STRUCTURE.md  README.md  SDK_PACKAGING.md  SDK_REGISTRATION_STRATEGY.md  STUDY_PLAN.md  USER_GUIDE.md  clean_architecture_visualization.html  opencl_concepts.md
docs/slides/plan/: PART_I.md  SLIDE_WORKFLOW.md  USER_GUIDE.md  request
docs/slides/presentation/: OpenCL_Framework.key  OpenCL_Framework_ppt.pptx  SPEAKER_NOTE. md
examples/dilate/c_ref/: dilate3x3_ref.c
examples/dilate/cl/: dilate0.cl
examples/dilate3x3/c_ref/: dilate3x3_ref.c
examples/dilate3x3/cl/: dilate1.cl
examples/gaussian/c_ref/: gaussian5x5_ref.c
examples/gaussian/cl/: gaussian0.cl
examples/gaussian5x5/c_ref/: gaussian5x5_ref.c
examples/gaussian5x5/cl/: gaussian1.cl  gaussian2.cl  gaussian_4.cl
examples/harris_corner/c_ref/: harris_corner_ref.c
examples/harris_corner/cl/: harris_corner0.cl  harris_corner_1.cl
examples/lucas_kanade/c_ref/: lucas_kanade_ref.c
examples/lucas_kanade/cl/: lucas_kanade0.cl  lucas_kanade_1.cl
examples/relu/c_ref/: relu_ref.c
examples/relu/cl/: relu0.cl  relu1.cl  relu3.cl  relu_1.cl  relu_3.cl
examples/simple_print_test/: Makefile  README.md  host.c  kernel.cl  utils.h
examples/simple_print_test/CL/: cl.h
examples/simple_test/: CMakeLists.txt  build.sh  cl_include_check.sh  host.c  kernel.cl  run.sh
examples/simple_test/include/: utils.h
examples/simple_test1/: README.md
examples/simple_test1/scripts/: build.sh  run.sh
examples/simple_test1/src/: CMakeLists.txt  host.c
examples/svd/: SVD_PARALLELISM.md
examples/svd/c_ref/: svd_ref.c
examples/svd/cl/: svd0.cl  svd_1.cl  svd_2.cl
include/: README.md  algorithm_runner.h  limits.h  op_interface.h  op_registry.h  types.h
include/cl/: platform.h
include/utils/: verify.h
lib/: README.md
scripts/: analyze_deps.py  benchmark.sh  build.sh  cdep_analyzer.py  create_new_algo  create_new_algo.c  create_new_algo.py  create_new_algo.sh  create_sdk.sh  format.sh  func_scanning.py  generate_all_kernel_json.sh  generate_gaussian_kernels.py  generate_kernel_json.py  generate_registry.sh  generate_test_image.py  run.sh  run_all_variants.sh
slides/: request
slides/checking/: SLIDE_GENERATION_WORKFLOW.md  SPEAKER_NOTES.md
slides/plan/: PART_II.md  outline.md
slides/presentation/: OpenCL_Framework_60min.key  OpenCL_Framework_60min.pptx
src/: CMakeLists.txt  Makefile  algorithm_runner.c  algorithm_runner.h  main.c  main.cpp
src/cl/: foo.cl  gaussian5x5.cl  threshold.cl
src/core/: algorithm_runner.c  android_runner.c  android_runner.h  op_registry.c
src/dilate/: dilate3x3.c  dilate3x3.h
src/dilate/c_ref/: dilate3x3_ref.c  dilate3x3_ref.h
src/dilate/cl/: dilate1.cl
src/gaussian/: gaussian5x5.c  gaussian5x5.h
src/gaussian/c_ref/: gaussian5x5_ref.c  gaussian5x5_ref.h
src/gaussian/cl/: gaussian0.cl  gaussian1.cl  gaussian2.cl
src/ops/: gaussian5x5.cpp  gaussian5x5.h  opBase.h  opRegistry.h  threshold.cpp  threshold.h
src/platform/: cache_manager.c  cache_manager.h  cl_extension_api.c  cl_extension_api.h  kernel_args.c  kernel_args.h  opencl_utils.c  opencl_utils.h
src/utils/: cache_manager.c  cache_manager.h  cl_extension_api.c  cl_extension_api.h  config.c  config.h  config_parser.c  config_parser.h  image_io.c  image_io.h  op_interface.h  op_registry.c  op_registry.h  opencl_utils.c  opencl_utils.h  safe_ops.h  verify.c  verify.h
tests/: README.md  ci_test.sh  detect_tests.sh  generate_report.sh  run_tests.sh  test_config.sh
tools/: generate_harris_corners_golden  generate_harris_corners_golden.c
