[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccpp-analyzer"
version = "2.0.0"
description = "C/C++ Dependency Analyzer with Clean Architecture Analysis"
readme = "README.md"
requires-python = ">=3.6.3"
license = {text = "MIT"}
keywords = ["c", "cpp", "dependency", "analyzer", "clean-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

# No runtime dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
]

[project.scripts]
cdep-analyzer = "cdep_analyzer:main"
codebase-reviewer = "codebase_reviewer:main"

[project.urls]
Repository = "https://github.com/kunchuntsai/opencl-study"

[tool.setuptools]
py-modules = ["cdep_analyzer", "codebase_reviewer"]

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
